FIX: browse channels button wrap (PERFORMANCE HIT)

--- a/files/discord-mods/themes/responsive-discord.css
+++ b/files/discord-mods/themes/responsive-discord.css
@@ -2,7 +2,7 @@
  * @name Greens Responsive Discord
  * @author GreenMan36#0633
  * @authorLink https://github.com/GreenMan36
- * @version 05.02.23a
+ * @version 12.02.23a
  * @description A theme that tries to make Discord's sidebars adapt when resizing your window.
 */
 
@@ -19,7 +19,7 @@
 /* used for theme name and version, DO NOT TOUCH */
 :root {
     --theme-name: "Greens Responsive Discord";
-    --version: "05.02.23a";
+    --version: "12.02.23a";
 }
 
 /* these can be customized. just copy/paste the whole thing into your custom CSS and mess around with it. */
@@ -259,6 +259,11 @@ a.anchor-1MIwyf.anchorUnderlineOnHover-2qPutX.snowsgivingLink-1TZi3c{
 
     .chat-2ZfjoI {
         margin-left: 128px;
+    }
+
+    /* force the browse channels text to not wrap around */
+    .name-28HaxV {
+        white-space: nowrap;
     }
 
     div#channels:not(:hover) {
